Enhance extension popup styles + dark mode
Originally I just wanted to add `prefers-color-scheme: dark`, but I
ended up revamping the style to look more like the reactjs.org
website

--- a/shells/webextension/popups/disabled.html
+++ b/shells/webextension/popups/disabled.html
@@ -1,21 +1,10 @@
+<!doctype html>
+<meta charset="utf-8">
+<link href="shared.css" rel="stylesheet">
 <script src="shared.js"></script>
-<style>
-  html, body {
-    font-size: 14px;
-    min-width: 410px;
-    min-height: 33px;
-  }
-
-  body {
-    margin: 8px;
-  }
-
-  hr {
-    width: 100%;
-  }
-</style>
 <p>
   <b>This page doesn&rsquo;t appear to be using React.</b>
-  <br />
+</p>
+<p>
   If this seems wrong, follow the <a href="https://github.com/facebook/react-devtools/blob/master/README.md#the-react-tab-doesnt-show-up">troubleshooting instructions</a>.
 </p>
