--- a/shells/webextension/popups/development.html
+++ b/shells/webextension/popups/development.html
@@ -1,26 +1,15 @@
+<!doctype html>
+<meta charset="utf-8">
+<link href="shared.css" rel="stylesheet">
 <script src="shared.js"></script>
-<style>
-  html, body {
-    font-size: 14px;
-    min-width: 460px;
-    min-height: 101px;
-  }
-
-  body {
-    margin: 8px;
-  }
-
-  hr {
-    width: 100%;
-  }
-</style>
 <p>
   <b>This page is using the development build of React. &#x1f6a7;</b>
 </p>
 <p>
   Note that the development build is not suitable for production.
-  <br />
-  Make sure to <a href="https://facebook.github.io/react/docs/optimizing-performance.html#use-the-production-build">use the production build</a> before deployment.
+</p>
+<p>
+  Make sure to <a href="https://reactjs.org/docs/optimizing-performance.html#use-the-production-build">use the production build</a> before deployment.
 </p>
 <hr />
 <p>
