--- a/shells/webextension/popups/production.html
+++ b/shells/webextension/popups/production.html
@@ -1,21 +1,10 @@
+<!doctype html>
+<meta charset="utf-8">
+<link href="shared.css" rel="stylesheet">
 <script src="shared.js"></script>
-<style>
-  html, body {
-    font-size: 14px;
-    min-width: 460px;
-    min-height: 39px;
-  }
-
-  body {
-    margin: 8px;
-  }
-
-  hr {
-    width: 100%;
-  }
-</style>
 <p>
   <b>This page is using the production build of React. &#x2705;</b>
-  <br />
+</p>
+<p>
   Open the developer tools, and the React tab will appear to the right.
 </p>
