--- a/shells/webextension/popups/unminified.html
+++ b/shells/webextension/popups/unminified.html
@@ -1,29 +1,18 @@
+<!doctype html>
+<meta charset="utf-8">
+<link href="shared.css" rel="stylesheet">
 <script src="shared.js"></script>
-<style>
-  html, body {
-    font-size: 14px;
-    min-width: 460px;
-    min-height: 133px;
-  }
-
-  body {
-    margin: 8px;
-  }
-
-  hr {
-    width: 100%;
-  }
-</style>
 <p>
   <b>This page is using an unminified build of React. &#x1f6a7;</b>
 </p>
 <p>
   The React build on this page appears to be unminified.
-  <br />
+</p>
+<p>
   This makes its size larger, and causes React to run slower.
-  <br />
-  <br />
-  Make sure to <a href="https://facebook.github.io/react/docs/optimizing-performance.html#use-the-production-build">set up minification</a> before deployment.
+</p>
+<p>
+  Make sure to <a href="https://reactjs.org/docs/optimizing-performance.html#use-the-production-build">set up minification</a> before deployment.
 </p>
 <hr />
 <p>
